<resources>
    <string name="app_name">MaydonTop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Avazbek Ubaydullayev</string>
    <string name="nav_header_subtitle">avazxon.ubaydullayev@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Bo\'limni tanlash</string>
    <string name="menu_gallery">Bronlar tarixi</string>
    <string name="menu_slideshow">Xarita</string>
    <string name="viloyatni_tanlang">Viloyatni tanlang</string>
    <string name="tanlash">Tanlash</string>

    <string name="location"><a href="https://goo.gl/maps/5evnDhs6cnm4gFW76">Lakatsiya orqali borish</a></string>
    <string name="maydonlar_ro_yhati">Maydonlar ro\'yhati</string>
    <string name="maydon_ma_lumotlari">Maydon ma\'lumotlari</string>
    <string name="maydon_soni">Maydon soni:</string>
    <string name="maydon_formati">Maydon formati:</string>
    <string name="gazon_to_shamasi">Gazon to\'shamasi:</string>
    <string name="ijara_haqi">Ijara haqi:</string>
    <string name="shahar">Shahar:</string>
    <string name="tel">Tel.:</string>
    <string name="lokatsiya">Lokatsiya:</string>
    <string name="map_key">AIzaSyA1E2V0YYQJR8aJ59_fAOlc6I9gSAPMZKQ</string>
    <!--    <string name="text_bottom_line"><u>https://maps.app.goo.gl/T9xU6JJuRajtb8fS6</u>.</string>-->

    <string-array name="catNames">
        <item>Барсик</item>
        <item>Мурзик</item>
        <item>Васька</item>
        <item>Рыжик</item>
    </string-array>
</resources>