<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="uz.nits.maydontop.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="uz.nits.maydontop.ui.home1.Home1Fragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_home1" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="uz.nits.maydontop.ui.home2.Home2Fragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_home2" />
</navigation>