<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="ScrollViewCount">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple_700">

        <ImageView
            android:id="@+id/stadion_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_arrow_back"
            android:tint="@color/white"
            tools:ignore="ContentDescription,UseAppTint" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30sp"
            android:gravity="center_vertical"
            android:text="@string/maydon_ma_lumotlari"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:orientation="vertical"
                android:scrollbars="none"
                tools:ignore="ScrollViewCount,UselessParent">

                <ImageView
                    android:id="@+id/stadionBigImg"
                    android:layout_width="match_parent"
                    android:layout_height="260sp"
                    android:src="@drawable/maydon4"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:id="@+id/stadionGrid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:scaleType="centerInside"
                            android:src="@drawable/maydon4"
                            tools:ignore="ContentDescription" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5sp"
                            android:layout_weight="1"
                            android:scaleType="centerInside"
                            android:src="@drawable/maydon4"
                            tools:ignore="ContentDescription" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="85sp"
                            android:layout_marginStart="5sp"
                            android:layout_weight="1"
                            android:scaleType="centerInside"
                            android:src="@drawable/maydon4"
                            tools:ignore="ContentDescription" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:scaleType="centerInside"
                            android:src="@drawable/maydon4"
                            tools:ignore="ContentDescription" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5sp"
                            android:layout_weight="1"
                            android:scaleType="centerInside"
                            android:src="@drawable/maydon4"
                            tools:ignore="ContentDescription" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="85sp"
                            android:layout_marginStart="5sp"
                            android:layout_weight="1"
                            android:scaleType="centerInside"
                            android:src="@drawable/maydon4"
                            tools:ignore="ContentDescription" />
                    </LinearLayout>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/maydonSoni"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5sp"
                        android:orientation="horizontal"
                        android:paddingTop="10sp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/maydon_soni"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="2"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            tools:ignore="HardcodedText" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/maydonFormati"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/maydonSoni"
                        android:orientation="horizontal"
                        android:paddingTop="5sp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/maydon_formati"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Ochiq/Yopiq"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            tools:ignore="HardcodedText" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/maydonGazon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/maydonFormati"
                        android:layout_marginTop="5sp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gazon_to_shamasi"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Su'niy"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            tools:ignore="HardcodedText" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/maydonIjara"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/maydonGazon"
                        android:layout_marginTop="5sp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ijara_haqi"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="100 000 so'm / soat"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            tools:ignore="HardcodedText" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/maydonShahar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/maydonIjara"
                        android:layout_marginTop="5sp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/shahar"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Namangan"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            tools:ignore="HardcodedText" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/maydonMonjal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/maydonShahar"
                        android:layout_marginTop="5sp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Mo'njal: "
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            tools:ignore="HardcodedText" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Go'zal dahasi, J Manguberdi ko'chasi, 7-uy"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            tools:ignore="HardcodedText" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/maydonTel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/maydonMonjal"
                        android:layout_marginTop="5sp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tel"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="(90) 123 45 67, (91) 712 55 66"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            tools:ignore="HardcodedText" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/maydonLokatsiya"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/maydonTel"
                        android:layout_marginTop="5sp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lokatsiya"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/locationId"
                            android:layout_marginLeft="5sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/location"
                            android:textColor="@color/black"
                            android:textColorLink="@color/purple_700"
                            android:textSize="16sp" />
                    </LinearLayout>
                    <fragment
                        android:id="@+id/map"
                        android:layout_marginTop="10sp"
                        android:layout_below="@id/maydonLokatsiya"
                        android:name="com.google.android.gms.maps.SupportMapFragment"
                        android:layout_width="match_parent"
                        android:layout_height="500sp"
                        tools:context=".StadionActivity" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>